# So that relative imports from be13_api work
AM_CPPFLAGS = -I${top_srcdir}/src/be13_api
AUTOMAKE_OPTIONS = subdir-objects


DOXYGEN_FILES = doxygen/Doxyfile doxygen/Makefile doxygen/programmer_manual.doxygen doxygen/README \
	doxygen/images/BEViewer_blank.eps doxygen/images/BEViewer_blank.png

EXTRA_DIST = \
	1page.txt \
	2011.NPS.slides.pdf \
	2013.COSE.bulk_extractor.pdf \
	2018.OSDFCON.Yamazaki.pdf \
	ROADMAP_1.4.md \
	ROADMAP_1.5.md \
	ROADMAP_1.6.md \
	ROADMAP_2.0.md \
	announce/announce_1.2.txt \
	announce/announce_1.3.1.txt \
	announce/announce_1.3.txt \
	announce/announce_1.4.1.txt \
	announce/announce_1.4.txt \
	announce/announce_1.5.2.md \
	announce/announce_1.5.md \
	announce/announce_1.6.0.md \
	bulk_extractor.html \
	Diagnostic_Notes/be_crash_diagnostics.md \
	Diagnostic_Notes/bulk_extractor.md
	Diagnostic_Notes/crash_diagnosis1.txt \
	Diagnostic_Notes/crash_diagnosis2.txt\
	Diagnostic_Notes/debugging_performance_problems.html \
	Diagnostic_Notes/open_source_help \
	Diagnostic_Notes/using_gdb \
	performance.txt \
	$(DOXYGEN_FILES)
